@@ -443,6 +443,8 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
   case.
 * (bug 26164) Potential html injection when the database server isn't available
 * (bug 26160) Upload description set by extensions are not propagated
+* (bug 9675) generateSitemap.php now takes an --urlpath parameter to allow
+  absolute URLs in the sitemap index (as required e.g. by Google)
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
@@ -543,8 +545,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * (bug 26125) prop=imageinfo&iiprop=size now returns the page count if the 
   file is a multi-page file
 * (bug 10268) Added linktodiffs parameter on action=feedwatchlist
-* (bug 9675) generateSitemap.php now takes an --urlpath parameter to allow
-  absolute URLs in the sitemap index (as required e.g. by Google)
+* (bug 26219) Show API limits for multi values in description
 
 === Languages updated in 1.17 ===
 
